# code_weaver

./: .gitignore  README.md  pyproject.toml  setup_env.py  start.sh  system_prompt.md
src/code_weaver/: __init__.py  chat.py  cli.py  config.py  graph.py  main.py  state.py  utils.py  web_ui.py
src/code_weaver/tools/: __init__.py  code_tools.py  file_tools.py  linter_tools.py  system_tools.py  web_tools.py
tests/: test_edge_cases.py  test_file_tools.py  test_graph.py  test_integration.py  test_other_tools.py  test_path_security.py  test_security.py  test_security_deep_dive.py
